--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,12 +6,61 @@
        xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="MediaPlayer.MainWindow"
         Title="Sharplayer" Height="144" Width="170" MinWidth="600" MinHeight="400" FontFamily="FontAw" Background="Black">
+    <Window.Resources>
+
+
+        <Style TargetType="{x:Type ListBoxItem}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                        <Border x:Name="Bd"
+                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                        BorderThickness="{TemplateBinding BorderThickness}"
+                                        Background="{TemplateBinding Background}"
+                                        Padding="{TemplateBinding Padding}"
+                                        SnapsToDevicePixels="true">
+                            <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                        SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                                        VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <MultiTrigger>
+                                <MultiTrigger.Conditions>
+                                    <Condition Property="Selector.IsSelectionActive"
+                                                        Value="False" />
+                                    <Condition Property="IsSelected"
+                                                        Value="True" />
+                                </MultiTrigger.Conditions>
+                                <Setter Property="Background"
+                                                TargetName="Bd"
+                                                Value="#FFC19BEB" />
+                            </MultiTrigger>
+                            <MultiTrigger>
+                                <MultiTrigger.Conditions>
+                                    <Condition Property="Selector.IsSelectionActive"
+                                                        Value="True" />
+                                    <Condition Property="IsSelected"
+                                                        Value="True" />
+                                </MultiTrigger.Conditions>
+                                <Setter Property="Background"
+                                                TargetName="Bd"
+                                                Value="#FFC19BEB" />
+                            </MultiTrigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+
+
+    </Window.Resources>
     <Window.DataContext>
         <local:MainWindowViewModel/>
     </Window.DataContext>
     <Grid Margin="0">
-	 <ContentControl Content="{Binding MyMediaElement}" HorizontalAlignment="Left" Margin="27.5,45.5,0,0" VerticalAlignment="Top" Height="110.4" Width="138.877" Foreground="Red" Background="Black"/>
-       
+        <ContentControl Content="{Binding MyMediaElement}" HorizontalAlignment="Left" Margin="27.5,45.5,0,0" VerticalAlignment="Top" Height="110.4" Width="138.877" Foreground="Red" Background="Black"/>
+
 
         <Border x:Name="BotomBarBorder" BorderBrush="#FF303030" BorderThickness="0,1,0,0" Background="#FF161616" Height="40" VerticalAlignment="Bottom">
             <Grid x:Name="BotomBarGrid" Margin="0,-1,0,0" >
@@ -127,17 +176,26 @@
         </Grid>
         <Slider x:Name="progressSlider" IsMoveToPointEnabled="true" HorizontalAlignment="Left" Margin="0,325.5,0,0" VerticalAlignment="Top" Width="595" Value="{Binding Path=SliderValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Minimum="0" Maximum="{Binding Path=SliderMaxValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Foreground="{x:Null}"/>
         <Grid ClipToBounds="True" Background="Black" Margin="150,0,0,44">
-            <TabControl BorderBrush="{x:Null}" BorderThickness="0" Background="{x:Null}" Padding="0" Name="MainTabControl" SelectedIndex="{ Binding Path=SelectedIndex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }">
-        		<TabItem Header="Musique" BorderBrush="{x:Null}" >
-        			<Grid Background="Black">
+            <TabControl BorderBrush="{x:Null}" BorderThickness="0" Background="{x:Null}" Padding="0" Name="MainTabControl" SelectedIndex="{ Binding Path=SelectedIndex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" Margin="0,-25,0,0">
+                <TabItem Header="Musique" BorderBrush="{x:Null}" Height="20.4" VerticalAlignment="Bottom" >
+                    <Grid Background="Black">
                         <TextBlock x:Name="artist" Margin="0,0,10,10" TextWrapping="Wrap" TextAlignment="Right" FontSize="16" Foreground="#FFDFE1E5" Height="19.2" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="142"><Run Language="fr-fr" Text="{ Binding Path=NowPlayingArtist, Mode=OneWay, UpdateSourceTrigger=PropertyChanged }"/></TextBlock>
                         <TextBlock x:Name="title" Margin="0,0,10,29.2" TextWrapping="Wrap" TextAlignment="Right" FontSize="18.667" FontWeight="SemiBold" Foreground="#FFC19BEB" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="51"><Run Language="fr-fr" Text="{ Binding Path=NowPlayingTitle, Mode=OneWay, UpdateSourceTrigger=PropertyChanged }"/></TextBlock>
-        				<TextBlock x:Name="musicIcon" Margin="130.834,105.648,130.833,105.648" TextWrapping="Wrap" Foreground="#FFC19BEB" FontSize="96" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" TextAlignment="Center" LineHeight="29.333"><Span><Run Text="&#xF001;"/></Span></TextBlock>
-        			</Grid>
-        		</TabItem>
-                <TabItem Header="Playlist" BorderBrush="{x:Null}" Margin="-2,-2,-2,0" IsSelected="{Binding DisplayXamlTab, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-        			<Grid Background="Black">
-                        <ListView x:Name="artistsListView" HorizontalAlignment="Left" Height="308.1" VerticalAlignment="Top" Width="136" ItemsSource="{Binding ArtistsList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{ Binding Path=SelectedArtist, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" Background="Black" Foreground="#FFDFE1E5" BorderBrush="#FF303030" BorderThickness="0,0,1,0" >
+                        <TextBlock x:Name="musicIcon" Margin="130.834,105.648,130.833,105.648" TextWrapping="Wrap" Foreground="#FFC19BEB" FontSize="96" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" TextAlignment="Center" LineHeight="29.333"><Span><Run Text="&#xF001;"/></Span></TextBlock>
+                    </Grid>
+                </TabItem>
+                <TabItem Header="Playlist" BorderBrush="{x:Null}" Margin="-1.5,-2,0,0.5" IsSelected="{Binding DisplayXamlTab, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Width="52" Height="22" VerticalAlignment="Bottom">
+                    <Grid Background="Black">
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <ListBox Grid.Column="0" x:Name="artistsListView" ItemsSource="{Binding ArtistsList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{ Binding Path=SelectedArtist, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" Background="Black" Foreground="#FFDFE1E5" BorderBrush="#FF303030" BorderThickness="0,0,1,0"  UseLayoutRounding="False" Padding="-2" >
 
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="MouseDoubleClick">
@@ -146,15 +204,16 @@
                                 </i:EventTrigger>
                             </i:Interaction.Triggers>
 
-                            <ListView.View>
-						  <GridView>
-							<GridViewColumn Width="100" Header="Artist Name" />
-						  </GridView>
-						</ListView.View>
 
 
-        				</ListView>
-                        <ListView x:Name="albumsListView" HorizontalAlignment="Left" Height="308.1" VerticalAlignment="Top" Width="162" Margin="136,0,0,0" ItemsSource="{Binding AlbumsList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{ Binding Path=SelectedAlbum, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" Foreground="#FFC19BEB" Background="Black" BorderBrush="#FF303030" BorderThickness="0,0,1,0" >
+
+                        </ListBox>
+                        <GridSplitter HorizontalAlignment="Right" 
+                  VerticalAlignment="Stretch" 
+                  Grid.Column="1" ResizeBehavior="PreviousAndNext"
+                  Width="0.5" Background="#FF303030"/>
+
+                        <ListBox Grid.Column="2"  x:Name="albumsListView" ItemsSource="{Binding AlbumsList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{ Binding Path=SelectedAlbum, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" Foreground="#FFDFE1E5" Background="Black" BorderBrush="#FF303030" BorderThickness="0,0,1,0" Padding="-2" >
 
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="MouseDoubleClick">
@@ -162,16 +221,18 @@
                                                             CommandParameter="{Binding ElementName=albumsListView, Path=SelectedItem}" />
                                 </i:EventTrigger>
                             </i:Interaction.Triggers>
-                            
-                            <ListView.View>
-        						<GridView>
-        							<GridViewColumn Width="100" Header="Album name" />
-        						</GridView>
-        					</ListView.View>
 
 
-        				</ListView>
-                        <ListView x:Name="titleListView" HorizontalAlignment="Left" Height="308.1" VerticalAlignment="Top" Width="147" Margin="298,0,0,0" ItemsSource="{Binding TrackList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{ Binding Path=SelectedTitle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" Background="Black" Foreground="#FFC19BEB" BorderBrush="{x:Null}" BorderThickness="0" >
+
+
+                        </ListBox>
+                        <GridSplitter HorizontalAlignment="Right" 
+                  VerticalAlignment="Stretch" 
+                  Grid.Column="3" ResizeBehavior="PreviousAndNext"
+                  Width="0.5" Background="#FF303030"/>
+                        
+                        
+                        <ListBox x:Name="titleListView" Grid.Column="4" ItemsSource="{Binding TrackList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectedIndex="{ Binding Path=SelectedTitle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" Background="Black" Foreground="#FFDFE1E5" BorderBrush="{x:Null}" BorderThickness="0" Padding="-2" >
 
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="MouseDoubleClick">
@@ -180,18 +241,13 @@
                                 </i:EventTrigger>
                             </i:Interaction.Triggers>
 
-                            <ListView.View>
-        						<GridView>
-									<GridViewColumn Width="10" Header="#" />
-        							<GridViewColumn Width="100" Header="Title Name" />
-        						</GridView>
-        					</ListView.View>
 
 
-        				</ListView>
-        			</Grid>
-        		</TabItem>
-        	</TabControl>
+
+                        </ListBox>
+                    </Grid>
+                </TabItem>
+            </TabControl>
         </Grid>
 
     </Grid>
