--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
        xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="MediaPlayer.MainWindow"
-        Title="Sharplayer" Height="144" Width="170" MinWidth="600" MinHeight="400" FontFamily="FontAw" Background="Black">
+        Title="Sharplayer" Height="281" Width="347" MinWidth="600" MinHeight="400" FontFamily="FontAw" Background="Black">
     <Window.Resources>
 
         <Style x:Key="SliderRepeatButton" TargetType="RepeatButton">
@@ -328,13 +328,16 @@
 
             </ListBox>
         </Grid>
-        <Slider x:Name="progressSlider" IsMoveToPointEnabled="true" HorizontalAlignment="Left"  Margin="0,320,0,0" VerticalAlignment="Top" Width="595" Minimum="0" Maximum="{Binding Path=SliderMaxValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Foreground="{x:Null}"  Style="{StaticResource Horizontal_Slider}" Value="{Binding Path=SliderValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Panel.ZIndex="99"/>
-
+        <Slider x:Name="progressSlider" IsMoveToPointEnabled="true"  Margin="0,0,0,31.5" Minimum="0" Maximum="{Binding Path=SliderMaxValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Foreground="{x:Null}"  Style="{StaticResource Horizontal_Slider}" Value="{Binding Path=SliderValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Panel.ZIndex="99" Height="21" VerticalAlignment="Bottom"/>
+  <!--
+       
+     <Slider x:Name="progressSlider" IsMoveToPointEnabled="true" HorizontalAlignment="Left"  Style="{StaticResource MyCustomStyleForSlider}" Margin="0,328,0,0" VerticalAlignment="Top" Width="595" Value="{Binding Path=SliderValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Minimum="0" Maximum="{Binding Path=SliderMaxValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Foreground="{x:Null}"/>
+   -->
 
         <Grid ClipToBounds="True" Background="Black" Margin="150,0,0,44">
             <TabControl BorderBrush="{x:Null}" BorderThickness="0" Background="{x:Null}" Padding="0" Name="MainTabControl" SelectedIndex="{ Binding Path=SelectedIndex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" Margin="0,-25,0,0">
                 <TabItem Header="Musique" BorderBrush="{x:Null}" Height="20.4" VerticalAlignment="Bottom" >
-                    <Grid Background="Black">
+                    <Grid Background="Black" Margin="0,0,0,0.5">
                         <TextBlock x:Name="artist" Margin="0,0,10,10" TextWrapping="Wrap" TextAlignment="Right" FontSize="16" Foreground="#FFDFE1E5" Height="19.2" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="142"><Run Language="fr-fr" Text="{ Binding Path=NowPlayingArtist, Mode=OneWay, UpdateSourceTrigger=PropertyChanged }"/></TextBlock>
                         <TextBlock x:Name="title" Margin="0,0,10,29.2" TextWrapping="Wrap" TextAlignment="Right" FontSize="18.667" FontWeight="SemiBold" Foreground="#FFC19BEB" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="51"><Run Language="fr-fr" Text="{ Binding Path=NowPlayingTitle, Mode=OneWay, UpdateSourceTrigger=PropertyChanged }"/></TextBlock>
                         <TextBlock x:Name="musicIcon" Margin="130.834,105.648,130.833,105.648" TextWrapping="Wrap" Foreground="#FFC19BEB" FontSize="96" FontFamily="/MediaPlayer;component/Fonts/#FontAwesome" TextAlignment="Center" LineHeight="29.333"><Span><Run Text="&#xF001;"/></Span></TextBlock>
